--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.13",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -17,11 +18,19 @@
     "eslint-config-next": "13.5.2",
     "next": "13.5.2",
     "next-themes": "^0.2.1",
+    "notion-client": "^6.16.0",
+    "notion-to-md": "^3.1.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-markdown": "8.0.3",
+    "react-notion": "^0.10.0",
+    "react-syntax-highlighter": "15.4.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/react-syntax-highlighter": "^15.5.7"
   }
 }
