--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "create:icons": "svgr -d ./src/app/assets/icons --no-dimensions --typescript --ignore-existing --replace-attr-values \"#3d255e=currentColor\" --svg-props role=\"img\" ./src/app/assets/icons/svgs"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.13",
@@ -16,21 +17,20 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
-    "next": "13.5.2",
+    "next": "^13.5.4",
     "next-themes": "^0.2.1",
-    "notion-client": "^6.16.0",
     "notion-to-md": "^3.1.1",
-    "postcss": "8.4.30",
+    "postcss": "^8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-markdown": "8.0.3",
-    "react-notion": "^0.10.0",
     "react-syntax-highlighter": "15.4.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@svgr/cli": "^8.1.0",
     "@types/react-syntax-highlighter": "^15.5.7"
   }
 }
